# muwave

./: .gitignore  CHANGELOG.md  MANIFEST.in  PARALLEL_DECODE.md  README.md  benchmark_parallel.sh  char.py  config.yaml  debug_decode_positions.py  debug_decoded_bytes.py  debug_metadata_nibbles.py  demo_channels.py  package-lock.json  pyproject.toml  quickstart.sh  test_audio.py  test_comprehensive.py  test_detection.py  test_parallel.py
INFO/: ANTI_INTERFERENCE_IMPROVEMENTS.md  CONFIGURATION_GUIDE.md  FORMAT_SUPPORT.md  INTERFERENCE_RESILIENCE_STRATEGIES.md  PARALLEL_DECODE.md  PERFORMANCE_IMPROVEMENTS.md  README.md
muwave/: __init__.py  cli.py
muwave.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
muwave/audio/: __init__.py  device.py  fsk.py
muwave/core/: config.py  logger.py  party.py
muwave/ollama/: __init__.py  client.py
muwave/protocol/: __init__.py  receiver.py  sync.py  transmitter.py
muwave/ui/: interface.py
muwave/utils/: formats.py  helpers.py
muwave/web/: server.py
muwave/web/static/css/: style.css
muwave/web/static/js/: main.js
muwave/web/templates/: index.html  party.html  user.html
tests/: __init__.py  test_config.py  test_fsk.py  test_generate.py  test_interference_resilience.py  test_logger.py  test_ollama.py  test_party.py  test_signal_detection.py
tools/: unicode_convert.py
