[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "muwave"
version = "0.1.0"
description = "Sound-based communication protocol for AI agents, compatible with Linux and macOS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "muwave contributors"}
]
keywords = ["audio", "communication", "protocol", "ai", "ollama", "fsk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "numpy>=1.21.0",
    "sounddevice>=0.4.6",
    "scipy>=1.7.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "click>=8.0.0",
    "flask>=2.3.0",
    "flask-socketio>=5.3.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
muwave = "muwave.cli:main"

[project.urls]
Homepage = "https://github.com/maple-underscore/muwave"
Repository = "https://github.com/maple-underscore/muwave"

[tool.setuptools.packages.find]
where = ["."]
include = ["muwave*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
